starting branch for availability work

--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "llvm-project"]
 	path = llvm-project
 	url = https://github.com/llvm/llvm-project.git
+[submodule "sancus-riot"]
+	path = sancus-riot
+	url = git@github.com:fritzalder/sancus-riot.git
